@@ -1,5 +1,7 @@
 2018-04-30 Release 4.7
 	- remove obsolete Python2 compatibility code
+	- add wildcard support to tag patterns, so that we can use
+	  patterns like "*" or "*+f-children"
 	- revamped date handling to support partial dates like "2018-01"
 	  or "2018", and also special notation like "2018W05" or "2018Q1"
 	- add min and max methods to hxl.model.Dataset
